Fix reversions to advice page
These reversions were caused by the merge with Meidi's additions removing
the noscript styling and the input styling from the style.css file.

I doubt that happened on purpose; I probably messed up my branching along
the way. Either way, this is why I prioritize keeping working code checked
into version control (Git): So I can just restore the removed section from
the repository.

--- a/css/style.css
+++ b/css/style.css
@@ -379,3 +379,10 @@ p.aut{
 	line-height:1.8em;
 	padding: 0;
 }
+.no-js {
+  display: none;
+}
+.advising input, .advising select {
+  color: #999;
+  background-color: #000;
+}
